--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
                 <div class="hide-menu a-nav-toggle"></div>
                 <div class="menu">
                     <div class="menu-lang">
-                        <a href="#" class="menu-lang-item active">Eng.</a>
-                        <a href="#" class="menu-lang-item">Fra.</a>
-                        <a href="#" class="menu-lang-item">Ara.</a>
+                        <a href="#" class="menu-lang-item active">TH.</a>
+                        <a href="#" class="menu-lang-item">Eng.</a>
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
@@ -88,7 +87,7 @@
                                     <li>โทรศัพท์ : Call me (+66) 92-5454670</li>
                                     <li>อีเมล : 24560@ds.ac.th</li>
                                 </ul>
-                                <a href="#Contact" class="download-cv">Download CV <i class="fas fa-download"></i></a>
+                                <a href="#Contact" class="download-cv">ไทย <i class="fas fa-download">อังกฤษ</i></a>
                             </div>
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
@@ -110,7 +109,7 @@
                                 <div class="col-lg-7">
                                     <div class="about-image pt-100 rpt-50 text-lg-right">
                                         <div class="about-inner-images">
-                                            <img class="animate-element delay7 fadeInUp" src="assets/images/about/about-dark.png" alt="About">
+                                            <img class="animate-element delay7 fadeInUp" src="assets/images/about/sasii.png" alt="About">
                                             <img class="shape-one animate-element delay10 bounceIn" src="assets/images/about/shape-one-dark.png" alt="Shape">
                                             <img class="shape-two animate-element delay11 bounceIn" src="assets/images/about/shape-two-dark.png" alt="Shape">
                                         </div>
@@ -128,7 +127,7 @@
                                     <div class="service-image animate-element delay4 fadeInUp">
                                         <span class="sub-title mb-75">ไลฟ์สไตล์</span>
                                         <div class="service-inner-images">
-                                            <img src="assets/images/services/services-dark.png" alt="Service">
+                                            <img src="assets/images/services/activity.png" alt="Service">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/services/shape-one-dark.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/services/shape-two-dark.png" alt="shape">
                                         </div>
@@ -226,7 +225,7 @@
                                 <div class="col-lg-7">
                                     <div class="skill-image pt-55 text-lg-right animate-element delay4 fadeInUp">
                                         <div class="skill-images-inner">
-                                            <img src="assets/images/skills/skills-dark.png" alt="Skills">
+                                            <img src="assets/images/skills/skilll.png" alt="Skills">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/skills/shape-one.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/skills/shape-two-dark.png" alt="shape">
                                         </div>
@@ -327,16 +326,16 @@
                             </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/acitivities/portfolio1.png" alt="Portfolio">
+                                    <img src="assets/images/certificate/aa.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/acitivities/portfolio2.png" alt="Portfolio">
+                                    <img src="assets/images/certificate/aaaa.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/acitivities/portfolio1.png" alt="Portfolio">
+                                    <img src="assets/images/certificate/aa.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/acitivities/portfolio2.png" alt="Portfolio">
+                                    <img src="assets/images/certificate/aaaa.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
@@ -464,7 +463,7 @@
                            </div>
                         </div>
                         <div class="footer-bottom-girl animate-element delay12 zoomIn">
-                           <img src="assets/images/contact/footer-bottom-girl.png" alt="footer girl">
+                           <img src="assets/images/contact/qq.png" alt="footer girl">
                        </div>
                         <div class="footer-bottom-shape">
                             <img src="assets/images/contact/footer-bottom-shape.png" alt="Shape">
