--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="hide-menu a-nav-toggle"></div>
                 <div class="menu">
                     <div class="menu-lang">
-                        <a href="#" class="menu-lang-item active">TH.</a>
-                        <a href="#" class="menu-lang-item">Eng.</a>
+                        <a href="index.html" class="menu-lang-item active">TH.</a>
+                        <a href="index-en.html" class="menu-lang-item">Eng.</a>
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
@@ -87,7 +87,7 @@
                                     <li>โทรศัพท์ : Call me (+66) 92-5454670</li>
                                     <li>อีเมล : 24560@ds.ac.th</li>
                                 </ul>
-                                <a href="#Contact" class="download-cv">ไทย <i class="fas fa-download">อังกฤษ</i></a>
+                                <a href="index.html">ไทย </a><a href="index-en.html">อังกฤษ </a></a>
                             </div>
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
